feat: remove brandId references across multiple entities and update related queries for branch-first architecture